[workspace]
members = [
    ".",
    "parsers/parser_code",
    "parsers/parser_sqf",
    "parsers/parser_sqm",
    "parsers/parser_hpp"
]

[workspace.dependencies]
hemtt-sqf = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }

[package]
name = "mission_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
pbo_tools = { path = "../pbo_tools" }
parser_sqf = { path = "parsers/parser_sqf" }
parser_sqm = { path = "parsers/parser_sqm" }
parser_hpp = { path = "parsers/parser_hpp" }
hemtt-sqf = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
hemtt-config = { workspace = true }
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
walkdir = "2.5.0"
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
anyhow = "1.0.97"
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
chrono = { version = "0.4.40", features = ["serde"] }
once_cell = "1.21.0"
num_cpus = "1.16.0"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.18.0"

[[example]]
name = "batch_process"
path = "examples/batch_process.rs"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
