[workspace]
members = [
    ".",
    "parsers/parser_sqf",
    "parsers/parser_sqm",
    "parsers/parser_hpp"
]

[workspace.dependencies]
hemtt-sqf = { path = "../HEMTT/libs/sqf" }
hemtt-workspace = { path = "../HEMTT/libs/workspace" }
hemtt-preprocessor = { path = "../HEMTT/libs/preprocessor" }
hemtt-common = { path = "../HEMTT/libs/common" }
hemtt-config = { path = "../HEMTT/libs/config" }
# hemtt-sqf = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }

[package]
name = "mission_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
parser_sqf = { path = "parsers/parser_sqf" }
parser_sqm = { path = "parsers/parser_sqm" }
parser_hpp = { path = "parsers/parser_hpp" }
anyhow = "1.0.97"
env_logger = "0.11.7"
log = "0.4.26"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[lints.rust]
# dead_code = "allow"
# unused_parens = "allow"
# unused_imports = "allow"
# unused_variables = "allow"
# unused_mut = "allow"

[[test]]
name = "integration"
path = "tests/integration_test.rs"
harness = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bench]]
name = "mission_scanner_benchmarks"
harness = false
