[metadata]
name = mission_scanner
version = 0.1.0
description = Mission file scanner and analyzer
author = Your Name

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pytest>=6.0
    pytest-cov>=2.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0
