[package]
name = "mission_scanner_parsers"
version = "0.1.0"
edition = "2021"
description = "Parsers for Arma 3 mission files (HPP, SQF, SQM)"
license = "MIT"
repository = "https://github.com/yourusername/mission_scanner_parsers"
documentation = "https://docs.rs/mission_scanner_parsers"
readme = "README.md"
keywords = ["arma3", "parser", "gaming"]
categories = ["parsing", "games"]

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.218", features = ["derive"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.1"
float_eq = "1.0.1"

[lib]
name = "parsers"
path = "src/lib.rs"

[[bin]]
name = "mission-scanner"
path = "src/main.rs"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
deprecated = "deny"