[package]
name = "parser_hpp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
hemtt-common = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
thiserror = "2.0.12"
log = "0.4"

[dev-dependencies]
tempfile = "3.18.0"
env_logger = "0.10"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"