[package]
name = "parser_hpp"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
chumsky = "0.9.3"
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
thiserror = "2.0.12"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.8.1"

[dev-dependencies]
env_logger = "0.11.7"
insta = "1.34.0"
paste = "1.0.14"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"