[package]
name = "parser_hpp"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
chumsky = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.8.1"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"