[package]
name = "parser_sqf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
hemtt-sqf = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.18.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"