[package]
name = "parser_sqf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
hemtt-common = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-sqf = { workspace = true }
hemtt-preprocessor = { workspace = true }
log = "0.4.26"

[dev-dependencies]
env_logger = "0.11.7"
tempfile = "3.10.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sqf_parser_benchmarks"
harness = false

# [lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"
# unused_assignments = "allow"