[package]
name = "parser_sqm"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
rayon = "1.8.0"
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
tempfile = "3.8.1"

[dev-dependencies]
test-case = "3.1.0"
pretty_assertions = "1.4.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"