[package]
name = "parser_sqm"
version = "0.1.0"
edition = "2021"

[dependencies]
hemtt-sqm = { workspace = true }
rayon = "1.8.0"

[dev-dependencies]
test-case = "3.1.0"
pretty_assertions = "1.4.0"
criterion = "0.5"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"

[[bench]]
name = "query_benchmarks"
harness = false